# sm-action-rs

./: .env.test.example  .gitignore  Cargo.toml  Dockerfile  action.yml  entrypoint.sh
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  ci.yml
src/: config.rs  main.rs
